group 'sztSocketServer'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'
sourceCompatibility = 1.6

mainClassName='com.lakala.Boot'
applicationDefaultJvmArgs=['-XX:PermSize=128M', '-XX:MaxPermSize=1024m', '-Xms512m','-Xmx2048m']
repositories {
    mavenLocal()

    maven {
        name "maven central"
        url "http://10.5.31.12:8081/nexus/content/repositories/central/"
    }
    maven {
        name "amber repo"
        url "http://10.5.31.12:8081/nexus/content/repositories/releases/"
    }
//    maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
}
ext {
    springVersion = '3.2.9.RELEASE'
    springSecurityVersion = '3.2.0.RELEASE'
    amberVersion = '1.0.1.RELEASE'
    codecVersion = '1.8'
    validationVersion = '1.1.0.Final'
    hibernateVersion ='5.1.3.Final'
    slf4jVersion ='1.7.2'
    springredisVersion ='1.2.1.RELEASE'
    mysqlVersion ='5.1.35'
    junitVersion = '4.12'
    mockitoVersion = '2.0.8-beta'
    cxfVersion = '3.1.4'
    httpclientVersion ='4.5'
    prometheusVersion='0.0.9'
    jsonsimpleVersion='1.1.1'
    fileuploadVersion='1.3.1'
    mybatisspringVersion='1.2.2'
    bcprovVersion='1.53'
    elasticVersion = '2.2.0'
    jacksonVersion = '2.6.2'
    lang3Version = '3.4'
}
dependencies {
    compile ("com.lakala.amber:com.lakala.amber.core:$amberVersion"){
        exclude module:'javax.servlet-api'
    }
    compile "com.lakala.amber:com.lakala.amber.channel.tcp:$amberVersion"
    compile "com.lakala.amber:com.lakala.amber.common:$amberVersion"
    compile "com.lakala.amber:com.lakala.amber.security:$amberVersion"
    compile "com.lakala.amber:com.lakala.amber.config:$amberVersion"
    compile "com.lakala.amber:com.lakala.amber.service.dict:$amberVersion"
    compile "com.lakala.amber:com.lakala.amber.service.id:$amberVersion"
    compile "com.lakala.amber:com.lakala.amber.transform:$amberVersion"
    testCompile group: 'junit', name: 'junit', version: '4.11'
    compile("org.springframework.boot:spring-boot-starter-web:1.5.2.RELEASE")
    // https://mvnrepository.com/artifact/org.springframework/spring-tx
    compile group: 'org.springframework', name: 'spring-tx', version: '4.3.7.RELEASE'
// https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
    runtime files('resources')
}
